# broinsight

./: DQ_SPEC.md  NEXT_STEPS.md  README.md  SPEC_DQ.md  SPEC_EDA_ADVANCED.md  SPEC_EDA_SIMPLE.md  UX_FLOW.md  VERSIONS.md  dev.ipynb  dev_dataquality.ipynb  dev_metadata.ipynb  dev_new_idea.ipynb  flow.md  main.py  metadata.db  pyproject.toml
.github/workflows/: release.yml
broinsight/: __init__.py  broinsight.py  flow.py
broinsight/actions/: __init__.py  chat.py  generate_sql.py  guide_question.py  organize.py  retrieve.py  select_metadata.py  user_input.py
broinsight/data_quality/: create_profile.py  criteria.py  field_profile.py  sql_profile.py
broinsight/experiment/: bedrock.py
broinsight/metadata/: metadata_db.py
broinsight/prompt_hub/: chart_builder.md  guide_question.md  organize.md
broinsight/utils/: data_catalog.py  data_spec.py
metadata/: customers_df.yaml  products_df.yaml  purchases_df.yaml
