[project]
name = "broinsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "broflow>=0.1.5",
    "brollm>=0.1.2",
    "broprompt>=0.1.5",
    "duckdb>=1.3.2",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
